---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
CaseStatement {
    selector: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "StateMachine",
            },
        ),
        base: None,
    },
    case_blocks: [
        ConditionalBlock {
            condition: LiteralInteger {
                value: 1,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ],
        },
    ],
    else_block: [
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
